--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Basilica! | Pesto</title>
 
@@ -9,9 +10,11 @@
 
 	<script type="text/javascript">
 	if (Modernizr.cssgradients == true) {
-		console.log("this browser supports the gradient feature");
+		console.log("this browser supports gradient feature");
 	}
 	</script>
+
+	<link rel="stylesheet" href="css/styles.css">
 
 </head>
 
@@ -19,34 +22,36 @@
 
 	<div class="wrapper">
 
-		<!-- 1. Branding -->
-		<div class="branding">
+		<!-- 1. Header -->
+		<header>
 			<h1>Basilica!</h1>
 			<a class="beta" href="#">Beta</a>
-		</div>
+		</header>
 
 		<!-- 2. Navigation -->
-		<div class="nav_main">
-			<p>Bonjour Monsieur <a href="#">Ferme</a></p>
-			<nav>
-				<ul class="nav_features">
-					<li class="nav_pickit"><a href="#">pick it</a></li>
-					<li class="nav_cookit"><a href="#">cook it</a></li>
-					<li class="nav_storeit"><a href="#">store it</a></li>
-				</ul>
-			</nav>
-		</div>
+		<nav>
+			<p>Bonjour Monsieur Ferme</p>
+			<ul>
+				<li class="nav-pickit"><a href="#">pick it</a></li>
+				<li class="nav-cookit"><a href="#">cook it</a></li>
+				<li class="nav-storeit"><a href="#">store it</a></li>
+			</ul>
+		</nav>
 
-		<div class="content">
+
+		<div class="content cf">
 			<!-- 3. Main content -->
 			<article itemscope itemtype="http://schema.org/Recipe" class="content_main">
 				<h2>Pesto</h2>
 				<p>A sauce of crushed basil leaves, pine nuts, garlic, Parmesan cheese, and olive oil, typically served with pasta.</p>
 				<h3>Directions</h3>
 				<ol>
-					<li>Combine the basil, garlic, and pine nuts in a food processor and pulse until coarsely chopped. Add 1/2 cup of the oil and process until fully incorporated and smooth. Season with salt and pepper.</li>
-					<li>If using immediately, add all the remaining oil and pulse until smooth. Transfer the pesto to a large serving bowl and mix in the cheese.</li>
-					<li>If freezing, transfer to an air-tight container and drizzle remaining oil over the top. Freeze for up to 3 months. Thaw and stir in cheese.</li>
+					<li>Combine the basil, garlic, and pine nuts in a food processor and pulse until coarsely chopped. Add 1/2 cup of the oil
+						and process until fully incorporated and smooth. Season with salt and pepper.</li>
+					<li>If using immediately, add all the remaining oil and pulse until smooth. Transfer the pesto to a large serving bowl and
+						mix in the cheese.</li>
+					<li>If freezing, transfer to an air-tight container and drizzle remaining oil over the top. Freeze for up to 3 months. Thaw
+						and stir in cheese.</li>
 				</ol>
 				<h3>Ingredients</h3>
 				<ul class="ingredients">
@@ -67,11 +72,13 @@
 				<ul>
 					<li>
 						<h4><a href="#">Thai Basil</a></h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dapibus nunc nec dolor. Proin adipiscing interdum leo. Etiam convallis, quam ut ullamcorper tristique, mi nisl gravida sapien, et posuere est urna.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dapibus nunc nec dolor. Proin adipiscing interdum leo.
+							Etiam convallis, quam ut ullamcorper tristique, mi nisl gravida sapien, et posuere est urna.</p>
 					</li>
 					<li>
 						<h4><a href="#">Vietnamese Curry</a></h4>
-						<p>Suspendisse pulvinar, dolor in elementum rutrum, augue sem vehicula ante, posuere vulputate eros sem sed est. Aliquam accumsan lobortis justo.</p>
+						<p>Suspendisse pulvinar, dolor in elementum rutrum, augue sem vehicula ante, posuere vulputate eros sem sed est. Aliquam
+							accumsan lobortis justo.</p>
 					</li>
 				</ul>
 
@@ -79,11 +86,14 @@
 				<ul>
 					<li>
 						<h4><a href="#">You might also like</a></h4>
-						<p>The recipe in the link is half the original recipe that yields about half the amount. I always cut down on the oil in this recipe.</p>
+						<p>The recipe in the link is half the original recipe that yields about half the amount. I always cut down on the oil
+							in this recipe.</p>
 					</li>
 					<li>
 						<h4><a href="#">Thai Basil</a></h4>
-						<p>The author says her mother makes this dish during Chinese New Year, so it is a coincidence that I made it for the Easter weekend.</p>
+						<p>The author says her mother makes this dish during Chinese New Year, so it is a coincidence that I made it for the Easter
+							weekend.
+						</p>
 					</li>
 					<li>
 						<h4><a href="#">Vietnamese Curry</a></h4>
@@ -100,26 +110,8 @@
 			<p>Copyright Basilica! All Rights Reserved</p>
 		</footer>
 
-	</div><!-- end wrapper -->
+	</div>
+	<!-- end wrapper -->
 </body>
+
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
