--- a/app/index.html
+++ b/app/index.html
@@ -18,17 +18,13 @@
 
 </head>
 
-<body class="">
+<body>
 
-	<div class="wrapper">
-
-		<!-- 1. Header -->
 		<header>
 			<h1>Basilica!</h1>
 			<a class="beta" href="#">Beta</a>
 		</header>
 
-		<!-- 2. Navigation -->
 		<nav>
 			<p>Bonjour Monsieur Ferme</p>
 			<ul>
@@ -39,46 +35,41 @@
 		</nav>
 
 
-		<div class="content cf">
-			<!-- 3. Main content -->
-			<article itemscope itemtype="http://schema.org/Recipe" class="content_main">
-				<h2>Pesto</h2>
-				<p>A sauce of crushed basil leaves, pine nuts, garlic, Parmesan cheese, and olive oil, typically served with pasta.</p>
+		<div class="content">
+
+
+			<article itemscope itemtype="http://schema.org/Recipe">
+				<h2 itemprop="name">Pesto</h2>
+				<p itemprop="description">A sauce of crushed basil leaves, pine nuts, garlic, Parmesan cheese, and olive oil, typically served with pasta.</p>
 				<h3>Directions</h3>
-				<ol>
-					<li>Combine the basil, garlic, and pine nuts in a food processor and pulse until coarsely chopped. Add 1/2 cup of the oil
-						and process until fully incorporated and smooth. Season with salt and pepper.</li>
-					<li>If using immediately, add all the remaining oil and pulse until smooth. Transfer the pesto to a large serving bowl and
-						mix in the cheese.</li>
-					<li>If freezing, transfer to an air-tight container and drizzle remaining oil over the top. Freeze for up to 3 months. Thaw
-						and stir in cheese.</li>
+				<ol itemprop="recipeInstructions">
+					<li>Combine the basil, garlic, and pine nuts in a food processor and pulse until coarsely chopped. Add 1/2 cup of the oil and process until fully incorporated and smooth. Season with salt and pepper.</li>
+					<li>If using immediately, add all the remaining oil and pulse until smooth. Transfer the pesto to a large serving bowl and mix in the cheese.</li>
+					<li>If freezing, transfer to an air-tight container and drizzle remaining oil over the top. Freeze for up to 3 months. Thaw and stir in cheese.</li>
 				</ol>
 				<h3>Ingredients</h3>
-				<ul class="ingredients">
-					<li itemprop="ingedients">2 cups packed fresh basil leaves</li>
-					<li itemprop="ingedients">2 cloves garlic</li>
-					<li itemprop="ingedients">1/4 cup pine nuts</li>
-					<li itemprop="ingedients">2/3 cup extra-virgin olive oil</li>
-					<li itemprop="ingedients">Kosher salt and freshly ground black pepper, to taste</li>
-					<li itemprop="ingedients">1/2 cup freshly grated Pecorino cheese</li>
-					<li itemprop="ingedients">1 <abbr title="Pounds">lb</abbr> plain pasta</li>
+				<ul>
+					<li itemprop="recipeIngredient">2 cups packed fresh basil leaves</li>
+					<li itemprop="recipeIngredient">2 cloves garlic</li>
+					<li itemprop="recipeIngredient">1/4 cup pine nuts</li>
+					<li itemprop="recipeIngredient">2/3 cup extra-virgin olive oil</li>
+					<li itemprop="recipeIngredient">Kosher salt and freshly ground black pepper, to taste</li>
+					<li itemprop="recipeIngredient">1/2 cup freshly grated Pecorino cheese</li>
+					<li itemprop="recipeIngredient">1 <abbr title="Pounds">lb</abbr> plain pasta</li>
 				</ul>
 			</article>
 
-			<!-- 4. Supplementary content -->
-			<aside class="content_sub">
 
+			<aside>
 				<h3>Similar recipes</h3>
 				<ul>
 					<li>
 						<h4><a href="#">Thai Basil</a></h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dapibus nunc nec dolor. Proin adipiscing interdum leo.
-							Etiam convallis, quam ut ullamcorper tristique, mi nisl gravida sapien, et posuere est urna.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dapibus nunc nec dolor. Proin adipiscing interdum leo. Etiam convallis, quam ut ullamcorper tristique, mi nisl gravida sapien, et posuere est urna.</p>
 					</li>
 					<li>
 						<h4><a href="#">Vietnamese Curry</a></h4>
-						<p>Suspendisse pulvinar, dolor in elementum rutrum, augue sem vehicula ante, posuere vulputate eros sem sed est. Aliquam
-							accumsan lobortis justo.</p>
+						<p>Suspendisse pulvinar, dolor in elementum rutrum, augue sem vehicula ante, posuere vulputate eros sem sed est. Aliquam accumsan lobortis justo.</p>
 					</li>
 				</ul>
 
@@ -86,13 +77,11 @@
 				<ul>
 					<li>
 						<h4><a href="#">You might also like</a></h4>
-						<p>The recipe in the link is half the original recipe that yields about half the amount. I always cut down on the oil
-							in this recipe.</p>
+						<p>The recipe in the link is half the original recipe that yields about half the amount. I always cut down on the oil in this recipe.</p>
 					</li>
 					<li>
 						<h4><a href="#">Thai Basil</a></h4>
-						<p>The author says her mother makes this dish during Chinese New Year, so it is a coincidence that I made it for the Easter
-							weekend.
+						<p>The author says her mother makes this dish during Chinese New Year, so it is a coincidence that I made it for the Easter weekend.
 						</p>
 					</li>
 					<li>
@@ -103,15 +92,12 @@
 			</aside>
 		</div>
 
-		<!-- 5. Site information -->
 		<footer>
-			<h5><a href="#" title="Back to top">Basilica!</a></h5>
+			<h3><a href="#" title="Back to top">Basilica!</a></h3>
 			<p>Beta until the leaves have wilted</p>
 			<p>Copyright Basilica! All Rights Reserved</p>
 		</footer>
 
-	</div>
-	<!-- end wrapper -->
 </body>
 
 </html>
