--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
 			<article itemscope itemtype="http://schema.org/Recipe" role="main">
 				<h2 itemprop="name">Pesto</h2>
 				<p itemprop="description">A sauce of crushed basil leaves, pine nuts, garlic, Parmesan cheese, and olive oil, typically served with pasta.</p>
-				
+
 				<h3>Directions</h3>
 
 				<ol itemprop="recipeInstructions">
@@ -90,7 +90,7 @@
 					</li>
 					<li>
 						<h4><a href="#">Homemade Ice Cubes</a></h4>
-						<p>Mix 2 cups of water with 2 tablespoons of water. Add more water to taste. I work long hours and I just dont have the time to invest in this kind of hands-on cooking."
+						<p>Mix 2 cups of water with 2 tablespoons of water. Add more water to taste. I work long hours and I just don't have the time to invest in this kind of hands-on cooking.
 						</p>
 					</li>
 					<li>
