--- a/definition-list/index.html
+++ b/definition-list/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Menu Highlights</title>
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -22,5 +23,5 @@
 		<dd>Allow our executive chef to prepare a special selection of the day's top choices.</dd>
 	</dl>
 </div>
-</body>
+
 </html>
