--- a/definition-list/index.html
+++ b/definition-list/index.html
@@ -10,7 +10,7 @@
 	<dl>
 		<dt>Spicy Tuna Roll</dt>
 		<dd><img src="img/1.jpg" title="Tuna roll" alt="Tuna Roll"></dd>
-		<dd>Our specialty - spicy tuna rolls.</dd>
+		<dd>Our specialty - spicy tuna rolls. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</dd>
 	</dl>
 	<dl>
 		<dt>Sushi for Two</dt>
