--- a/app/index.html
+++ b/app/index.html
@@ -27,18 +27,16 @@
 
 		<nav>
 			<p>Bonjour Monsieur Ferme</p>
-			<ul role="navigation">
+			<ul>
 				<li class="nav-pickit"><a href="#">pick it</a></li>
 				<li class="nav-cookit"><a href="#">cook it</a></li>
 				<li class="nav-storeit"><a href="#">store it</a></li>
 			</ul>
 		</nav>
 
-
 		<div class="content">
 
-
-			<article itemscope itemtype="http://schema.org/Recipe" role="main">
+			<article itemscope itemtype="http://schema.org/Recipe">
 				<h2 itemprop="name">Pesto</h2>
 
 				<p itemprop="description">A sauce of crushed basil leaves, pine nuts, garlic, Parmesan cheese, and olive oil, typically served with pasta.</p>
@@ -70,7 +68,7 @@
 			</article>
 
 
-			<aside role="secondary">
+			<aside>
 				<h3>Similar recipes</h3>
 				<ul>
 					<li>
@@ -103,7 +101,7 @@
 		</div>
 
 
-		<footer role="contentinfo">
+		<footer>
 			<h3><a href="#" title="Back to top">Basilica!</a></h3>
 			<p>Beta until the leaves have wilted</p>
 			<p>Copyright Basilica! All Rights Reserved</p>
