--- a/definition-list/index.html
+++ b/definition-list/index.html
@@ -9,7 +9,7 @@
 <div class="menu-list">
 	<dl>
 		<dt>Spicy Tuna Roll</dt>
-		<dd><img src="img/1.jpg" title="Tuna roll" alt="Tuna Roll"></dd>
+		<dd><a href="img/1-lg.jpg"><img src="img/1.jpg" title="Tuna roll" alt="Tuna Roll"></a></dd>
 		<dd>Our specialty - spicy tuna rolls. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</dd>
 	</dl>
 	<dl>
@@ -24,4 +24,5 @@
 	</dl>
 </div>
 
+</body>
 </html>
