--- a/definition-list/index.html
+++ b/definition-list/index.html
@@ -4,14 +4,14 @@
 <title>Menu Highlights</title>
 <link rel="stylesheet" href="css/styles.css">
 <style>
-	.popover {
-		position: absolute;
-		top: 30%;
-		display: none;
-	}
-	.showme {
-		display: block;
-	}
+.popover {
+	position: absolute;
+	top: 30%;
+	display: none;
+}
+.showme {
+	display: block;
+}
 </style>
 </head>
 
@@ -32,27 +32,27 @@
 		<dd><a href="img/3-lg.jpg"><img src="img/3.jpg" title="Tuna roll" alt="Omikase"></a></dd>
 		<dd>Allow our executive chef to prepare a special selection of the day's top choices.</dd>
 	</dl>
-	<div class="popover">
-		<img src="img/1-lg.jpg" />
-	</div>
+<div class="popover">
+	<img src="img/1-lg.jpg" />
+</div>
 </div>
 <script>
-	var popover = document.querySelector('.popover')
-	var popoverImage = popover.querySelector('.popover img')
-	var linkedImages = document.querySelectorAll('a')
-	var imageLinks = [...linkedImages]
-	console.log(imageLinks)
-	imageLinks.forEach( () => this.addEventListener('click', run))
+var popover = document.querySelector('.popover')
+var popoverImage = popover.querySelector('.popover img')
 
-	function run() {
-		console.log(this)
-		popoverImage.setAttribute('src', 'img/3-lg.jpg')
-		popover.classList.toggle('showme')
-		event.preventDefault();
-	}
+var linkedImages = document.querySelectorAll('a')
+var imageLinks = [...linkedImages]
+imageLinks.forEach( imageLink => imageLink.addEventListener('click', run))
+
+function run() {
+	popoverImage.setAttribute('src', this.href)
+	popover.classList.toggle('showme')
+	event.preventDefault();
+}
 </script>
 </body>
 </html>
+
 
 
 
