--- a/definition-list/index.html
+++ b/definition-list/index.html
@@ -14,12 +14,12 @@
 	</dl>
 	<dl>
 		<dt>Sushi for Two</dt>
-		<dd><img src="img/2.jpg" title="Tuna roll" alt="Sushi for Two"></dd>
+		<dd><img src="img/2.jpg" title="Sushi for two" alt="Sushi for Two"></dd>
 		<dd>Enjoy a special treat for two. Orders also available for three or more.</dd>
 	</dl>
 	<dl>
 		<dt>Omikase</dt>
-		<dd><img src="img/3.jpg" title="Tuna roll" alt="Omikase"></dd>
+		<dd><img src="img/3.jpg" title="Omikase" alt="Omikase"></dd>
 		<dd>Allow our executive chef to prepare a special selection of the day's top choices.</dd>
 	</dl>
 </div>
