--- a/definition-list/index.html
+++ b/definition-list/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Menu Highlights</title>
-<link rel="stylesheet" href="css/styles.css">
+	<title>Menu Highlights</title>
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-<div class="menu-list">
-	<dl>
-		<dt>Spicy Tuna Roll</dt>
-		<dd><img src="img/1.jpg" title="Tuna roll" alt="Tuna Roll"></dd>
-		<dd>Our specialty - spicy tuna rolls.</dd>
-	</dl>
-	<dl>
-		<dt>Sushi for Two</dt>
-		<dd><img src="img/2.jpg" title="Sushi for two" alt="Sushi for Two"></dd>
-		<dd>Enjoy a special treat for two. Orders also available for three or more.</dd>
-	</dl>
-	<dl>
-		<dt>Omikase</dt>
-		<dd><img src="img/3.jpg" title="Omikase" alt="Omikase"></dd>
-		<dd>Allow our executive chef to prepare a special selection of the day's top choices.</dd>
-	</dl>
-</div>
+	<div class="menu-list">
+		<dl>
+			<dt>Spicy Tuna Roll</dt>
+			<dd><img src="img/1.jpg" title="Tuna roll" alt="Tuna Roll"></dd>
+			<dd>Our specialty - spicy tuna rolls. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </dd>
+		</dl>
+		<dl>
+			<dt>Sushi for Two</dt>
+			<dd><img src="img/2.jpg" title="Sushi for two" alt="Sushi for Two"></dd>
+			<dd>Enjoy a special treat for two. Orders also available for three or more.</dd>
+		</dl>
+		<dl>
+			<dt>Omikase</dt>
+			<dd><img src="img/3.jpg" title="Omikase" alt="Omikase"></dd>
+			<dd>Allow our executive chef to prepare a special selection of the day's top choices.</dd>
+		</dl>
+	</div>
 </body>
 </html>
